--- a/web/application/admin/view/product/edit.html
+++ b/web/application/admin/view/product/edit.html
@@ -449,26 +449,26 @@
 <div class="template-html" style="display: none">
     <div  style="width: 760px;margin:15px auto;padding:0 auto">
         <!-- 一级标题 -->
-        <div style="width:100%;height:auto;padding-bottom:15px;padding:20px; 0px">
+        <div style="width:100%;height:auto;padding-bottom:15px;padding:20px 0px;padding-top: 0;">
             <img  style="max-width:94%;" src="__STATIC__/img/product_detail_default-01.jpg" alt="" />
         </div>
 
-        <div style="text-align:center;background-color:#5B96E3;padding:10px 0px;margin-bottom:10px;">
-            <h3 style="color:#ffffff;line-height:15px;">商品信息</h3>
-            <p style="color:#ffffff;line-height:15px;">PRODUCT INFORMATION</p>
+        <div style="text-align:center;background-color:#5B96E3;padding:5px 0px;margin-bottom:10px;">
+            <h3 style="color:#ffffff;font-size: 20px;">商品信息</h3>
+            <p style="color:#ffffff;font-size: 14px;">PRODUCT INFORMATION</p>
         </div>
 
         <!-- 参数表图片 -->
         <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
             <div  style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                <span style="display:table-cell;min-width:55px;height:44px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">01</span>
-                <span style="display:table-cell;min-width:160px;height:44px;line-height:44px;font-size:22px;color:#2475E2;">特点描述</span>
+                <span style="display:table-cell;min-width:55px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">01</span>
+                <span style="display:table-cell;min-width:160px;font-size:18px;letter-spacing: 2px;color:#2475E2;">特点描述</span>
             </div>
             <div style="display: table-cell">
                 <span style="min-width: 100px;height: 12px;background-color: #E5F1FF;position:relative;top: 16px;"></span>
             </div>
         </div>
-        <div style="font:400 14px  MicrosoftYaHei ;color:  #666;width:100%; margin: 15px auto ">
+        <div style="font:400 14px/1.4  MicrosoftYaHei;color:  #666;width:100%; margin: 15px auto ">
             <p>
                 请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定请输入自定义文字请输入自定义文字请输入自定
             </p>
@@ -476,14 +476,14 @@
 
         <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
             <div  style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                <span style="display:table-cell;min-width:55px;height:44px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">02</span>
-                <span style="display:table-cell;min-width:160px;height:44px;line-height:44px;font-size:22px;color:#2475E2;">特点描述</span>
+                <span style="display:table-cell;min-width:55px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">02</span>
+                <span style="display:table-cell;min-width:160px;font-size:18px;letter-spacing: 2px;color:#2475E2;">特点描述</span>
             </div>
             <div style="display: table-cell">
                 <span style="min-width: 100px;height: 12px;background-color: #E5F1FF;position:relative;top: 16px;"></span>
             </div>
         </div>
-        <div style="font:400 14px  MicrosoftYaHei ;color:  #666;width:100%; margin: 15px auto ">
+        <div style="font:400 14px/1.4  MicrosoftYaHei ;color:  #666;width:100%; margin: 15px auto ">
             <p>
                 请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定请输入自定义文字请输入自定义文字请输入自定
             </p>
@@ -491,22 +491,22 @@
 
         <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
             <div  style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                <span style="display:table-cell;min-width:55px;height:44px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">03</span>
-                <span style="display:table-cell;min-width:160px;height:44px;line-height:44px;font-size:22px;color:#2475E2;">特点描述</span>
+                <span style="display:table-cell;min-width:55px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">03</span>
+                <span style="display:table-cell;min-width:160px;font-size:18px;letter-spacing: 2px;color:#2475E2;">特点描述</span>
             </div>
             <div style="display: table-cell">
                 <span style="min-width: 100px;height: 12px;background-color: #E5F1FF;position:relative;top: 16px;"></span>
             </div>
         </div>
-        <div style="font:400 14px  MicrosoftYaHei ;color:  #666;width:100%; margin: 15px auto ">
+        <div style="font:400 14px/1.4  MicrosoftYaHei ;color:  #666;width:100%; margin: 15px auto ">
             <p>
                 请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定请输入自定义文字请输入自定义文字请输入自定
             </p>
         </div>
 
-        <div style="text-align:center;background-color:#5B96E3;padding:10px 0px;margin-bottom:10px;">
-            <h3 style="color:#ffffff;line-height:15px;">商品实拍</h3>
-            <p style="color:#ffffff;line-height:15px;">PRODUCT PHOTOGRAPHY</p>
+        <div style="text-align:center;background-color:#5B96E3;padding:5px 0px;margin-bottom:10px;">
+            <h3 style="color:#ffffff;font-size: 20px;">商品实拍</h3>
+            <p style="color:#ffffff;font-size: 14px;">PRODUCT PHOTOGRAPHY</p>
         </div>
         <!-- 商品实拍 -->
         <div  style=" margin: 15px auto;text-align:center">
@@ -532,16 +532,16 @@
 <div class="template-html" style="display: none">
     <div  style="width: 760px;margin:15px auto;padding:0 auto">
         <!-- 一级标题 -->
-        <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
+        <div  style="display:table;position:relative;padding-bottom: 10px;font-family:'Microsoft YaHei';">
             <div style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                <span style="display:table-cell;min-width:55px;height:44px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">01</span>
-                <span style="display:table-cell;min-width:160px;height:44px;line-height:44px;font-size:22px;color:#2475E2;">一级标题</span>
+                <span style="display:table-cell;min-width:55px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">01</span>
+                <span style="display:table-cell;min-width:160px;letter-spacing: 2px;font-size:18px;color:#2475E2;">一级标题</span>
             </div>
             <div style="display: table-cell">
                 <span style="min-width: 100px;height: 12px;background-color: #E5F1FF;position:relative;top: 16px;"></span>
             </div>
         </div>
-        <div style="font:400 14px  MicrosoftYaHei ;color:  #666;">
+        <div style="font:400 14px/1.4  MicrosoftYaHei ;color:  #666;">
             <p>
                 请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定请输入自定义文字请输入自定义文字请输入自定
             </p>
@@ -553,8 +553,8 @@
         <!-- 参数表图片 -->
         <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
             <div  style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                <span style="display:table-cell;min-width:55px;height:44px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">02</span>
-                <span style="display:table-cell;min-width:160px;height:44px;line-height:44px;font-size:22px;color:#2475E2;">商品参数</span>
+                <span style="display:table-cell;min-width:55px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">02</span>
+                <span style="display:table-cell;min-width:160px;font-size:18px;letter-spacing: 2px;color:#2475E2;">商品参数</span>
             </div>
             <div style="display: table-cell">
                 <span style="min-width: 100px;height: 12px;background-color: #E5F1FF;position:relative;top: 16px;"></span>
@@ -567,14 +567,14 @@
         <!-- 商品简介 -->
         <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
             <div style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                <span style="display:table-cell;min-width:55px;height:44px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">03</span>
-                <span style="display:table-cell;min-width:160px;height:44px;line-height:44px;font-size:22px;color:#2475E2;">商品简介</span>
+                <span style="display:table-cell;min-width:55px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">03</span>
+                <span style="display:table-cell;min-width:160px;font-size:18px;letter-spacing: 2px;color:#2475E2;">商品简介</span>
             </div>
             <div style="display: table-cell">
                 <span style="min-width: 100px;height: 12px;background-color: #E5F1FF;position:relative;top: 16px;"></span>
             </div>
         </div>
-        <div style="font:400 14px  MicrosoftYaHei ;color:  #666;width:100%; margin: 15px auto ">
+        <div style="font:400 14px/1.4  MicrosoftYaHei ;color:  #666;width:100%; margin: 15px auto ">
             <p>
                 请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定义文字请输入自定请输入自定义文字请输入自定义文字请输入自定
             </p>
@@ -583,8 +583,8 @@
         <!-- 商品展示 -->
         <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
             <div style="min-width: 200px; display:table-cell;height:44px;line-height:44px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                <span style="display:table-cell;min-width:55px;height:44px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">04</span>
-                <span style="display:table-cell;min-width:160px;height:44px;line-height:44px;font-size:22px;color:#2475E2;">商品展示</span>
+                <span style="display:table-cell;min-width:55px;color:#fff;font-size:22px;background-color:#017fd9;float:left;">04</span>
+                <span style="display:table-cell;min-width:160px;font-size:18px;letter-spacing: 2px;color:#2475E2;">商品展示</span>
             </div>
             <div style="display: table-cell">
                 <span style="min-width: 100px;height: 12px;background-color: #E5F1FF;position:relative;top: 16px;"></span>
@@ -599,12 +599,12 @@
             <div  style="float:right; width: 240px ;left: 490px;margin: 15px auto">
                 <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
                     <div style="min-width: 200px; display:table-cell;height:30px;line-height:30px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                        <span style="display:table-cell;min-width:55px;height:30px;color:#fff;font-size:18px;background-color:#017fd9;float:left;">01</span>
-                        <span style="display:table-cell;min-width:160px;height:30px;line-height:30px;font-size:18px;color:#2475E2;">特点一</span>
+                        <span style="display:table-cell;min-width:55px;color:#fff;font-size:18px;background-color:#017fd9;float:left;">01</span>
+                        <span style="display:table-cell;min-width:160px;font-size:16px;letter-spacing: 2px;color:#2475E2;">特点一</span>
                     </div>
                 </div>
                 <div style="width: 100%; margin: 0 auto;">
-                    <p style="color:#666;font-size:14px;letter-spacing:1px;margin:15px 0 25px 0;">
+                    <p style="color:#666;font-size:14px;line-height:1.4;margin:15px 0 25px 0;">
                         LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。
                     </p>
                 </div>
@@ -614,12 +614,12 @@
             <div  style=" margin: 15px auto">
                 <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
                     <div style="min-width: 200px; display:table-cell;height:30px;line-height:30px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                        <span style="display:table-cell;min-width:55px;height:30px;color:#fff;font-size:18px;background-color:#017fd9;float:left;">02</span>
-                        <span style="display:table-cell;min-width:160px;height:30px;line-height:30px;font-size:18px;color:#2475E2;">特点二</span>
+                        <span style="display:table-cell;min-width:55px;color:#fff;font-size:18px;background-color:#017fd9;float:left;">02</span>
+                        <span style="display:table-cell;min-width:160px;font-size:16px;letter-spacing:2px;color:#2475E2;">特点二</span>
                     </div>
                 </div>
                 <div style="width: auto; margin: 0 auto;">
-                    <p style="color:#666;font-size:14px;letter-spacing:1px;margin:15px 0 25px 0;">
+                    <p style="color:#666;font-size:14px;line-height:1.4;margin:15px 0 25px 0;">
                         LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。
                     </p>
                 </div>
@@ -632,12 +632,12 @@
             <div style=" margin: 15px auto">
                 <div  style="display:table;position:relative;font-family:'Microsoft YaHei';">
                     <div style="min-width: 200px; display:table-cell;height:30px;line-height:30px;text-align:center;border:1px solid #017fd9;font-size:16px;color:#cf1724;position:relative;">
-                        <span style="display:table-cell;min-width:55px;height:30px;color:#fff;font-size:18px;background-color:#017fd9;float:left;">03</span>
-                        <span style="display:table-cell;min-width:160px;height:30px;line-height:30px;font-size:18px;color:#2475E2;">特点三</span>
+                        <span style="display:table-cell;min-width:55px;color:#fff;font-size:18px;background-color:#017fd9;float:left;">03</span>
+                        <span style="display:table-cell;min-width:160px;font-size:16px;letter-spacing: 2px;color:#2475E2;">特点三</span>
                     </div>
                 </div>
                 <div style="width: auto; margin: 0 auto;">
-                    <p style="color:#666;font-size:14px;letter-spacing:1px;margin:15px 0 25px 0;">
+                    <p style="color:#666;font-size:14px;line-height:1.4;margin:15px 0 25px 0;">
                         LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。LED 被称为第四代照明光源或绿色光源，具有节能、环保、寿命长、体积小等特点。
                     </p>
                 </div>
@@ -646,7 +646,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 <!--模板3-->
