'后台招商服务添加'

--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -50,6 +50,12 @@
                     'managerUrl' => url('admin/service/index'),
                     'managerVal' => []
                 ],[
+                  'managerKey' => '招商服务',
+                  'managerIcon'=> 'fa-cny',
+                  'managerUrl' => url('admin/service/merchant'),
+                  'managerVal' => []
+                ],
+                [
                     'managerKey' => '集众保理',
                     'managerIcon'=> 'fa-money',
                     'managerUrl' => url('admin/factoring/index'),
