--- a/web/application/admin/view/company_certification/view.html
+++ b/web/application/admin/view/company_certification/view.html
@@ -33,7 +33,7 @@
                             </div>
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">企业性质</label>
-                                <span class="">{$row.enterprise_type}</span>
+                                <span class="">{:getCompanyPropertyNew($row.enterprise_type)git}</span>
                             </div>
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">注册资金</label>
